--- a/public/esp/index.html
+++ b/public/esp/index.html
@@ -16,6 +16,8 @@
 
     <!-- CSS for dark theme -->
     <link rel="stylesheet" href="../css/lightStyle.css" id="theme-style">
+    <!-- CSS for aditional styles -->
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body>
@@ -26,7 +28,7 @@
     </button>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top" id="main-navbar">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">
                 <i class="bi bi-book-fill me-2"></i>LiburuGune
@@ -221,7 +223,7 @@
     <script src="../bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- JavaScript para cambiar tema -->
-    <script src="../js/theme-toggle.js"></script>
+    <script src="../js/theme-toggle-2.js"></script>
 
 </body>
 
