--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
 
     <!-- CSS for dark theme -->
     <link rel="stylesheet" href="./css/lightStyle.css" id="theme-style">
+    <!-- CSS for aditional styles -->
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -26,7 +28,7 @@
     </button>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top" id="main-navbar">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">
                 <i class="bi bi-book-fill me-2"></i>LiburuGune
@@ -142,6 +144,21 @@
                             <h5 class="card-title">Denden kokaleku zehatza</h5>
                             <p class="card-text">Gure datu basean aurkitzen diren liburu denda gustien kokaleku zehatze
                                 mapa batean ikusteko aukera duzu bertan.</p>
+                            <a href="#" class="btn btn-primary mt-auto">Gehiago jakin</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- DENDEN GOMENDIOAK -->
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 p-3">
+                        <div class="card-body d-flex flex-column">
+                            <div class="feature-icon">
+                                <i class="bi bi-star-fill"></i>
+                            </div>
+                            <h5 class="card-title">Gomendio pertsonalizatuak</h5>
+                            <p class="card-text">Zure gustuen arabera, Durangaldeko liburu-dendetan aurki ditzakezun
+                                liburuak gomendatzen dizkizugu.</p>
                             <a href="#" class="btn btn-primary mt-auto">Gehiago jakin</a>
                         </div>
                     </div>
