--- a/public/eng/index.html
+++ b/public/eng/index.html
@@ -8,16 +8,16 @@
     <link rel="icon" href="../assets/img/Logo.png" type="image/png">
 
     <!-- Bootstrap 5.3 CSS -->
-    <link rel="stylesheet" href="../bootstrap-5.3.8-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/styles/bootstrap-5.3.8-dist/css/bootstrap.min.css">
     </link>
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 
     <!-- CSS for dark theme -->
-    <link rel="stylesheet" href="../css/lightStyle.css" id="theme-style">
+    <link rel="stylesheet" href="../assets/styles/css/lightStyle.css" id="theme-style">
     <!-- CSS for aditional styles -->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../assets/styles/css/styles.css">
 </head>
 
 <body>
@@ -220,10 +220,10 @@
     </footer>
 
     <!-- Bootstrap 5.3 JS Bundle con Popper -->
-    <script src="../bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/scripts/bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- JavaScript para cambiar tema -->
-    <script src="../js/theme-toggle-2.js"></script>
+    <script src="../assets/scripts/js/theme-toggle-2.js"></script>
 
 </body>
 
