Refactor code structure for improved readability and maintainability

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LiburuGune</title>
-    <link rel="icon" href="./assets/img/Logo.png" type="image/png">
+    <link rel="icon" href="./assets/img/Logo-removebg.png" type="image/png">
 
     <!-- Bootstrap 5.3 CSS -->
     <link rel="stylesheet" href="assets/styles/bootstrap-5.3.8-dist/css/bootstrap.min.css">
@@ -63,13 +63,7 @@
 
                 </ul>
 
-                <!-- Buscador y botones a la derecha -->
-                <form class="d-flex me-2">
-                    <input class="form-control me-2" type="search" placeholder="Bilatu..." id="SearchPlaceholder">
-                    <button class="btn btn-outline-primary" type="submit">
-                        <i class="bi bi-search"></i>
-                    </button>
-                </form>
+                <!-- Botones a la derecha -->
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
@@ -81,7 +75,7 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item disabled" href="index.html">Euskera</a></li>
+                            <li><a class="dropdown-item disabled" href="index.html">Euskara</a></li>
                         </ul>
                     </li>
                 </ul>
