--- a/public/esp/index.html
+++ b/public/esp/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LiburuGune</title>
-    <link rel="icon" href="../assets/img/Logo.png" type="image/png">
+    <link rel="icon" href="../assets/img/Logo-removebg.png" type="image/png">
 
     <!-- Bootstrap 5.3 CSS -->
     <link rel="stylesheet" href="../assets/styles/bootstrap-5.3.8-dist/css/bootstrap.min.css">
@@ -63,13 +63,7 @@
 
                 </ul>
 
-                <!-- Buscador y botones a la derecha -->
-                <form class="d-flex me-2">
-                    <input class="form-control me-2" type="search" placeholder="Bilatu..." id="SearchPlaceholder">
-                    <button class="btn btn-outline-primary" type="submit">
-                        <i class="bi bi-search"></i>
-                    </button>
-                </form>
+                <!-- Botones a la derecha -->
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
@@ -77,7 +71,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../eng/index.html">Ingeles</a></li>
-                            <li><a class="dropdown-item" href="../index.html">Vasco</a></li>
+                            <li><a class="dropdown-item" href="../index.html">Euskara</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -94,12 +88,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h1 class="display-4 fw-bold mb-4">Zure liburu-denda hurbilenak</h1>
-                    <p class="lead mb-4">Durangaldeko liburu denda txikiak aurkitzeko toki aproposa. Bertan liburu
-                        denden kokalekua eta berain inguruko informazioa bilatzeko aukera duzu!</p>
+                    <h1 class="display-4 fw-bold mb-4">Tus librerías más cercanas</h1>
+                    <p class="lead mb-4">Un buen lugar para encontrar pequeñas librerías del Duranguesado. Libro propio
+                        Puedes buscar información sobre la ubicación de las tiendas y su entorno!</p>
                     <div class="d-flex gap-3">
-                        <a href="#" class="btn btn-outline-primary btn-lg" id="hero-btn">Liburu dendak</a>
-                        <a href="#" class="btn btn-outline-primary btn-lg" id="hero-btn">Liburu denden kokapena</a>
+                        <a href="#" class="btn btn-outline-primary btn-lg" id="hero-btn">Librerías</a>
+                        <a href="#" class="btn btn-outline-primary btn-lg" id="hero-btn">Ubicación de librerías</a>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center">
