--- a/public/index.html
+++ b/public/index.html
@@ -51,13 +51,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="bi bi-shop me-1"></i> Dendak
+                        <a class="nav-link" href="dendak.html">
+                            <i class="bi bi-shop me-1"></i>  Durangaldeko dendak
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="bi bi-map me-1"></i> Kokapenak
+                        <a class="nav-link" href="kokapena.html">
+                            <i class="bi bi-map me-1"></i> Denden kokapena
                         </a>
                     </li>
 
@@ -92,8 +92,8 @@
                     <p class="lead mb-4">Durangaldeko liburu denda txikiak aurkitzeko toki aproposa. Bertan liburu
                         denden kokalekua eta berain inguruko informazioa bilatzeko aukera duzu!</p>
                     <div class="d-flex gap-3">
-                        <a href="#" class="btn btn-outline-primary btn-lg" id="hero-btn">Liburu dendak</a>
-                        <a href="#" class="btn btn-outline-primary btn-lg" id="hero-btn">Liburu denden kokapena</a>
+                        <a href="dendak.html" class="btn btn-outline-primary btn-lg" id="hero-btn">Liburu dendak</a>
+                        <a href="kokapena.html" class="btn btn-outline-primary btn-lg" id="hero-btn">Liburu denden kokapena</a>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center">
