--- a/frontend/kokapena.html
+++ b/frontend/kokapena.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="./assets/styles/css/lightStyle.css" id="theme-style">
     <!-- CSS for aditional styles -->
     <link rel="stylesheet" href="./assets/styles/css/styles.css">
+
+    <!-- MapLibre GL JS CSS (open-source WebGL maps) -->
+    <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -88,13 +91,10 @@
         <div class="container my-5">
             <!-- "Service" section -->
             <div id="map-row" class="row mb-5">
-                <div>
-                    <iframe 
-                    src="https://www.google.com/maps/d/u/0/embed?mid=1xf72GL5SNezNLt_AeIebvgZtfE2w7TQ&ehbc=2E312F&noprof=1" 
-                    width="100%" 
-                    height="750">
+                <div class="col-12">
+                    <!-- Contenedor para MapLibre GL JS (fallback a iframe o mensaje si MapLibre no está disponible) -->
+                    <div id="map" style="width:100%;height:750px;min-height:400px;border-radius:6px;overflow:hidden;box-shadow:0 2px 6px rgba(0,0,0,0.08)"></div>
 
-                    </iframe>
                 </div>
             </div>
         </div>
@@ -143,9 +143,13 @@
     <!-- Bootstrap 5.3 JS Bundle con Popper -->
     <script src="./assets/scripts/bootstrap-5.3.8-dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- MapLibre GL JS -->
+    <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
+
     <!-- JavaScript para cambiar tema -->
     <script src="./assets/scripts/js/theme-toggle.js"></script>
-    <script src="./assets/scripts/js/script.js"></script>
+    <!-- <script src="./assets/scripts/js/script.js"></script> -->
+    <script src="./assets/scripts/js/mapa.js"></script>
 
 </body>
 
