Add initial HTML structure for Dendak page with Bootstrap integration and theme toggle functionality

--- a/public/esp/dendak.html
+++ b/public/esp/dendak.html
@@ -71,7 +71,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../eng/dendak.html">Ingles</a></li>
-                            <li><a class="dropdown-item" href="../dendak.html">Euskara</a></li>
+                            <li><a class="dropdown-item" href="../eus/dendak.html">Euskara</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
