--- a/public/eng/dendak.html
+++ b/public/eng/dendak.html
@@ -70,7 +70,7 @@
                             <i class="bi bi-translate me-1"></i> Lenguages
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="../dendak.html">Basque</a></li>
+                            <li><a class="dropdown-item" href="../eus/dendak.html">Basque</a></li>
                             <li><a class="dropdown-item" href="../esp/dendak.html">Spanish</a></li>
                             <li>
                                 <hr class="dropdown-divider">
