--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="dendak.html">
+                        <a class="nav-link" href="./eus/dendak.html">
                             <i class="bi bi-shop me-1"></i>  Durangaldeko dendak
                         </a>
                     </li>
