--- a/frontend/eus/dendak.html
+++ b/frontend/eus/dendak.html
@@ -86,6 +86,16 @@
     <!-- Main content -->
     <main class="main-content">
         <div class="container my-5">
+            <!-- Filter section -->
+            <div class="row mb-4">
+                <div class="col-md-4">
+                    <label for="municipio-filter" class="form-label">Select town</label>
+                    <select class="form-select" id="municipio-filter">
+                        <option value="">All</option>
+                    </select>
+                </div>
+            </div>
+            
             <!-- "Service" section -->
             <div id="shop-row" class="row mb-5">
                 
