--- a/frontend/eng/kokapena.html
+++ b/frontend/eng/kokapena.html
@@ -54,12 +54,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./dendak.html">
-                            <i class="bi bi-shop me-1"></i> Bookstores of Durangaldea
+                            <i class="bi bi-shop me-1"></i> Places of Durangaldea
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="./kokapena.html">
-                            <i class="bi bi-map me-1"></i> Where are the bookstores 
+                            <i class="bi bi-map me-1"></i> Map of the place 
                         </a>
                     </li>
 
