--- a/frontend/eng/index.html
+++ b/frontend/eng/index.html
@@ -52,12 +52,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./dendak.html">
-                            <i class="bi bi-shop me-1"></i> Bookstores of Durangaldea
+                            <i class="bi bi-shop me-1"></i> Places of Durangaldea
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./kokapena.html">
-                            <i class="bi bi-map me-1"></i> Where are the bookstores 
+                            <i class="bi bi-map me-1"></i> map of the place 
                         </a>
                     </li>
 
