--- a/frontend/esp/dendak.html
+++ b/frontend/esp/dendak.html
@@ -52,12 +52,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="./dendak.html">
-                            <i class="bi bi-shop me-1"></i> Tiendas del Duranguesado
+                            <i class="bi bi-shop me-1"></i> Sitios del Duranguesado
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./kokapena.html">
-                            <i class="bi bi-map me-1"></i> Donde están las tiendas
+                            <i class="bi bi-map me-1"></i> Mapa de lugar
                         </a>
                     </li>
                 </ul>
