--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,12 +52,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./eus/dendak.html">
-                            <i class="bi bi-shop me-1"></i>  Durangaldeko dendak
+                            <i class="bi bi-shop me-1"></i>  Durangaldeko tokiak
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./kokapena.html">
-                            <i class="bi bi-map me-1"></i> Denden kokapena
+                            <i class="bi bi-map me-1"></i> Kokapen mapa
                         </a>
                     </li>
 
